<resources>
    <string name="app_name">Chateo</string>
    <string name="front_page_tag">Connect easily with your family and friends over countries</string>
    <string name="terms_amp_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="start_messaging">Start Messaging</string>
    <string name="user_name">User Name</string>
    <string name="message_day">Msg day</string>
    <string name="message">Hey! Its my message</string>
    <string name="message_count">1</string>
    <string name="search">Search</string>
    <string name="current_status">Online</string>
</resources>